bootstrap/base/ns-argocd.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
spec: {}
status: {}
